Operators in vertexpaint and weightpaint (incl. the gradient tool) affect hidden (in editmode) parts of the mesh #106354

Closed
opened 2023-03-31 04:36:17 +02:00 by 刘文博 · 11 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.3.5, branch: master, commit date: 2023-03-20 10:19, hash: dd0cd1df1d1a
Worked: (newest version of Blender that worked as expected)

Short description of error
When not using paintmask, Weight gradient tool in weight paint affects the hidden parts of mesh, while using brush to paint doesn't.
Editmode hiding was only respected (when not using paintmask) since e3801a2bd4 [which also made it so PBVH drawing strokes does not at on hidden geo -- but left out other operators]

This is also true for many other operators in vertexpaint and weightpaint as well btw., as opposed to painting stokes [PBVH respects the BM_ELEM_HIDDEN flag, so that is fine], many operators act on hidden (in editmode) geometry when not using paintmask (e.g. Weights > Invert or Paint > Invert)

Note: this breaks the principle of "only edit visible stuff"
Note: imagepaint otoh still does not respect editmode hiding

Exact steps for others to reproduce the error
1 add 2 cylinders in a single mesh object
2 hide part of mesh in editmode
3 use the gradient tool (it will affect hidden parts of the mesh)

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.3.5, branch: master, commit date: 2023-03-20 10:19, hash: `dd0cd1df1d1a` Worked: (newest version of Blender that worked as expected) **Short description of error** When not using paintmask, Weight gradient tool in weight paint affects the hidden parts of mesh, while using brush to paint doesn't. Editmode hiding was only respected (when not using paintmask) since e3801a2bd417b63f8b30c4c2dfa19b2efdbf9ce7 [which also made it so PBVH drawing strokes does not at on hidden geo -- but left out other operators] This is also true for many other operators in vertexpaint and weightpaint as well btw., as opposed to painting stokes [PBVH respects the BM_ELEM_HIDDEN flag, so that is fine], many operators act on hidden (in editmode) geometry when not using paintmask (e.g. `Weights` > `Invert` or `Paint` > `Invert`) Note: this breaks the principle of "only edit visible stuff" Note: imagepaint otoh still does not respect editmode hiding **Exact steps for others to reproduce the error** 1 add 2 cylinders in a single mesh object 2 hide part of mesh in editmode 3 use the gradient tool (it will affect hidden parts of the mesh)
刘文博 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-31 04:36:18 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Sculpt, Paint & Texture
labels 2023-03-31 08:30:19 +02:00
Member

Looks like this is indeed a inconsistency. Using brush to paint weights doesn't affect hidden meshes while using gradient does.

Looks like this is indeed a inconsistency. Using brush to paint weights doesn't affect hidden meshes while using gradient does.
Member

Can confirm, will check

Can confirm, will check
Author

Looks like this is indeed a inconsistency. Using brush to paint weights doesn't affect hidden meshes while using gradient does.

I konw that but I wish the gradient tool have the same effect as brush.

> Looks like this is indeed a inconsistency. Using brush to paint weights doesn't affect hidden meshes while using gradient does. I konw that but I wish the gradient tool have the same effect as brush.
Member

This is also true for many other operators in vertexpaint and weightpaint as well btw., as opposed to painting stokes [PBVH respects the BM_ELEM_HIDDEN flag, so that is fine], many operators act on hidden (in editmode) geometry when not using paintmask (e.g. Weights > Invert or Paint > Invert)

This is also true for many other operators in vertexpaint and weightpaint as well btw., as opposed to painting stokes [PBVH respects the BM_ELEM_HIDDEN flag, so that is fine], many operators act on hidden (in editmode) geometry when not using paintmask (e.g. `Weights` > `Invert` or `Paint` > `Invert`)
Philipp Oeser changed title from Why gradient tool in weight paint affects the hidden parts of mesh? to Operators in vertexpaint and weightpaint (incl. the gradient tool) affect hidden (in editmode) parts of the mesh 2023-03-31 12:34:42 +02:00
Member

Yeah I have experiences on other modifiers doing this kind of thing as well, not sure if these are all bugs or if there's any design incentives to it (I doubt).

Yeah I have experiences on other modifiers doing this kind of thing as well, not sure if these are all bugs or if there's any design incentives to it (I doubt).
Member

Yeah I have experiences on other modifiers doing this kind of thing as well, not sure if these are all bugs or if there's any design incentives to it (I doubt).

Modifiers in editmode you mean? Got an example?
Or do you mean operators?

> Yeah I have experiences on other modifiers doing this kind of thing as well, not sure if these are all bugs or if there's any design incentives to it (I doubt). Modifiers in editmode you mean? Got an example? Or do you mean operators?
Member

Oh I mean operator, just typed it wrong.

Oh I mean operator, just typed it wrong.
Member

Which operators? (might look into something that respects it for all appropriate operators)

Which operators? (might look into something that respects it for all appropriate operators)
Member

@lichtwerk OK I remembered, it's not exactly "hidden" surfaces, but if you enablesback face culling, sculpting brushes would still affect back face which looks really weird.

Considering back face culling is done naturally on the GPU, this particular bug (for sculpting) might not be easy to solve, it's gonna be a different thing than this issue.

@lichtwerk OK I remembered, it's not exactly "hidden" surfaces, but if you enablesback face culling, sculpting brushes would still affect back face which looks really weird. Considering back face culling is done naturally on the GPU, this particular bug (for sculpting) might not be easy to solve, it's gonna be a different thing than this issue.
Member

Will have a look into this (both making imagepaint consistent as well as have all relevant operators respect the hidden state -- after talking in chat, this seems to have consensus amongst painting and animation artists)

Will have a look into this (both making imagepaint consistent as well as have all relevant operators respect the hidden state -- after talking in chat, this seems to have consensus amongst painting and animation artists)
Philipp Oeser self-assigned this 2023-04-03 10:21:15 +02:00
Member

A PR for Texture Paint: always respect edit mode hiding on faces is in #106544

A PR for `Texture Paint: always respect edit mode hiding on faces` is in #106544
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-02 09:05:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106354
No description provided.