Fix #106354: Account for hidden vertices in weight gradient operator

Weight gradient operator didn't respect hidden vertices. Now fixed.